logs/validate.20260327-102040.log
error: expected `,`
   --> src/Chap62/StarPartitionMtEph.rs:214:23
    |
214 |             decreases ne - k,
    |                       ^^

error[E0432]: unresolved import `crate::Chap62::StarPartitionMtEph::StarPartitionMtEph::parallel_star_partition`
  --> src/Chap62/StarContractionMtEph.rs:21:9
   |
21 |     use crate::Chap62::StarPartitionMtEph::StarPartitionMtEph::parallel_star_partition;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `parallel_star_partition` in `Chap62::StarPartitionMtEph::StarPartitionMtEph`

error[E0425]: cannot find function `obeys_key_model` in this scope
  --> src/Chap64/SpanTreeMtEph.rs:79:17
   |
79 |                 obeys_key_model::<V>(),
   |                 ^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this function
   |
 8 +     use vstd::std_specs::hash::obeys_key_model;
   |

error[E0425]: cannot find function `obeys_key_model` in this scope
   --> src/Chap64/SpanTreeMtEph.rs:113:21
    |
113 |                     obeys_key_model::<V>(),
    |                     ^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  8 +     use vstd::std_specs::hash::obeys_key_model;
    |

error[E0425]: cannot find function `obeys_key_model` in this scope
   --> src/Chap64/SpanTreeMtEph.rs:123:25
    |
123 |                         obeys_key_model::<V>(),
    |                         ^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
  8 +     use vstd::std_specs::hash::obeys_key_model;
    |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 202MB, peak z3 RSS: 0MB, min free: 22596MB
Sampled CPU Usage: rust_verify: 1s, z3 children: 0s
